[package]
name = "SummerChi"
version = "0.1.0"
authors = ["MissSummer <madamsummer@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
mockall = "0.8.1"

[dependencies]
graphchi = {path = "storage/graphchi"}
tokio = {version = "0.2", features = ["full"]}
