[package]
name = "Summeraph"
version = "0.1.0"
authors = ["MissSummer <madamsummer@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
engine_cache = {path = "components/engine_cache"}
io_controller = {path = "components/io_controller"}